* Suppression de code mort  * Amélioration de l'apparence de certains formulaires  * Mise à jour de certaines traductions
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2638 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -338,7 +338,9 @@ table {
 
 table tr td {
 	padding-top: 3px;
-    padding-right: 20px;
+}
+table tr td.labelcol {
+    padding-right: 1em;
 }
 
 #deleteconfirmtext {
