--- a/src/vigilo/themes/templates/vigimap/index.html
+++ b/src/vigilo/themes/templates/vigimap/index.html
@@ -37,7 +37,7 @@
 
 
     <div id="header">
-        <h1>VigiMap ${l_("(mode display)")}<span id="maptitle"></span></h1>
+        <h1>VigiMap<span id="maptitle"></span></h1>
     </div>
 
     <div id="menu">
