--- a/src/vigilo/themes/templates/vigigraph/searchhost.html
+++ b/src/vigilo/themes/templates/vigigraph/searchhost.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude">
-    <xi:include href="master.html" />
+    <xi:include href="main.html" />
     <head>
         <title>Vigigraph search</title>
     </head>
