Modif vigimap : ajout service de haut niveau
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2672 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/node.html
+++ b/src/vigilo/themes/templates/vigimap/node.html
@@ -19,6 +19,9 @@
         <py:when test="node.has_key('service')">
             <p>${l_("Service name: %(service)s on %(host)s") % {'service': node['service'], 'host': node['host' ]}}</p>
         </py:when>
+        <py:when test="node.has_key('hls')">
+            <p>${l_("Service name: %(service)s") % {'service': node['hls']}}</p>
+        </py:when>
         <py:otherwise>
             <p>${l_("Appliance name: %(host)s") % {'host': node['host']}}</p>    
         </py:otherwise>
