Changement de la formulation pour le plugin vigiboard d'édition des événements (pour éviter une confusion lorsque l'on sélecte plusieurs événements à éditer). Résoud en partie le bug 29493 côté gforge.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2683 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/plugins/status.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/status.html
@@ -21,7 +21,7 @@
     window.addEvent("domready", function () {
         /// HACK: voir notes sur window.search_dialog dans vigiboard.html.
         window.edit_dialog = new Jx.Dialog({
-            label: "${l_('Edit event')}",
+            label: "${l_('Editing')}",
             modal: false,
             resize: false,
             move: true,
