--- a/src/vigilo/themes/templates/common/error.html
+++ b/src/vigilo/themes/templates/common/error.html
@@ -8,11 +8,11 @@
 
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="content-type" py:replace="''"/>
-  <title>${l_('A %(error_code)d Error has Occurred') % {'error_code': code}}</title>
+  <title>${l_('A %(error_code)s Error has Occurred') % {'error_code': code}}</title>
 </head>
 
 <body>
-<h1>${l_('Error %(error_code)d') % {'error_code': code}}</h1>
+<h1>${l_('Error %(error_code)s') % {'error_code': code}}</h1>
 
 <div>${XML(message)}</div>
 </body>
