Ajout d'un message d'avertissement lorsque plusieurs événements sont sélectionnés pour édition avec des références vers des tickets différents.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2731 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -223,6 +223,12 @@ div.clearingdiv {
     margin: 0 auto;
 }
 
+#edit_event_form_warning {
+    color: red;
+    font-weight: bold;
+    text-align: center;
+}
+
 /* Dialogue de détails */
 
 #DetailsDialog {
