Mise à jour du contrôleur RPC pour mieux prendre en compte les permissions sur les données. Ajout du support des permissions au proxy Nagios. Utilisation du proxy Nagios dans les résultats de la recherche (template searchhost.html). Mise à jour des données de test pour tester les permissions : - l'utilisateur "editor" voit le groupe "Serveurs" car il a accès au groupe "Serveurs Linux" (et uniquement celui-là) - dans "Serveurs Linux", il voit l'hôte "localhost" car il a accès à son service "SSH" (et uniquement celui-là) - il peut accéder à la page Nagios de "localhost" et voir tous les services configurés dessus - il peut accéder à la page Nagios du service "SSH" sur "localhost" - s'il tente d'accéder aux pages des autres services de "localhost", une erreur 403 lui est retournée - s'il tente d'accéder à un hôte non-supervisé ou qu'une autre erreur est rencontrée, il obtient une erreur 404
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2750 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigigraph/searchhost.html
+++ b/src/vigilo/themes/templates/vigigraph/searchhost.html
@@ -11,7 +11,7 @@
         <table>
             <tr py:for="h in hosts">
                 <td class="hostname">&mdash; ${h}</td>
-                <td><a href="supPage?host=${h}">Sup page</a></td>
+                <td><a href="${tg.url('/nagios/%s/cgi-bin/status.cgi?style=detail&amp;supNav=1' % h)}">Sup page</a></td>
                 <td> - </td>
                 <td><a href="metroPage?host=${h}">Metro page</a></td>
             </tr>
