Mise à jour des templates de VigiBoard pour afficher correctement le nom d'hôte/service de la cause d'un événement corrélé dans les pages annexes.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2774 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -13,16 +13,16 @@
 <head> 
     <py:choose>
         <title py:when="hostname and servicename">
-            ${l_('Vigiboard - Events table for service "%(hostname)s" on "%(servicename)s"') % {
+            ${l_('VigiBoard - Events table for service "%(servicename)s" on "%(hostname)s"') % {
                 'hostname': hostname,
                 'servicename': servicename,
             }}
         </title>
         <title py:when="hostname">
-            ${l_('Vigiboard - Events table for host "%s"') % hostname}
+            ${l_('VigiBoard - Events table for host "%s"') % hostname}
         </title>
         <title py:otherwise="">
-            Vigiboard - Events table
+            VigiBoard - Events table
         </title>
     </py:choose>
 </head>
