--- a/src/vigilo/themes/templates/vigigraph/master.html
+++ b/src/vigilo/themes/templates/vigigraph/master.html
@@ -12,6 +12,8 @@
     <meta py:replace="select('*')"/>
     <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/reset.css')}" />
     <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/style.css')}" />
+    <link rel="search" type="application/opensearchdescription+xml"
+        title="Vigigraph search" href="${tg.url('/rpc/getOpenSearch')}"/>
 </head>
 
 <body py:match="body" py:attrs="select('@*')">
