--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/jxlib/jxtheme.uncompressed.css')}" />
     <style type="text/css">@import "${tg.url('css/map.css')}";</style>
     <style type="text/css">@import "${tg.url('css/images.css')}";</style>
+    <style type="text/css">@import "${tg.url('css/ServiceElement.css')}";</style>
+
     <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/drag.move.ghost.js')}"></script>
@@ -27,19 +29,23 @@
     <script type="text/javascript" src="${tg.url('/js/delete.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/map.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/mapElement.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/ServiceElement.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/delete.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/menu.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/MainEdit.js')}"></script>    
-        <div py:for="widget in widgets" py:strip="True">
-        <script type="text/javascript" src="${tg.url('/widgets/'+widget+'/'+widget+'.js')}"></script>
-        <link rel="stylesheet" type="text/css" href="${tg.url('/widgets/'+widget+'/'+widget+'.css')}" />
+
+    <div py:for="widget in widgets" py:strip="True">
+        <script type="text/javascript" src="${tg.url(widget+'.js')}"></script>
+        <link rel="stylesheet" type="text/css" href="${tg.url(widget+'.css')}" />
     </div>
+
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/Autocompleter.css')}" />
     <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter.Local.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter.Request.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/Autocompleter.Request.VigiloJSON.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/Observer.js')}"></script>
+
     <script type="text/javascript" src="${tg.url('/js/selectmapgroup.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/fieldautocomplete.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/buttonColor.js')}"></script>
