--- a/src/vigilo/themes/templates/vigimap/index.html
+++ b/src/vigilo/themes/templates/vigimap/index.html
@@ -9,6 +9,8 @@
     <!--[if IE]><script type="text/javascript" src="${tg.url('/js/excanvas.js')}"></script><![endif]-->
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/jxlib/jxtheme.uncompressed.css')}" />
     <style type="text/css">@import "${tg.url('css/map.css')}";</style>
+    <style type="text/css">@import "${tg.url('css/ServiceElement.css')}";</style>
+
     <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/drag.move.ghost.js')}"></script>
@@ -25,11 +27,13 @@
     <script type="text/javascript" src="${tg.url('/js/details.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/map.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/mapElement.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/ServiceElement.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/menu.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/MainDisplay.js')}"></script>    
-        <div py:for="widget in widgets" py:strip="True">
-        <script type="text/javascript" src="${tg.url('/widgets/'+widget+'/'+widget+'.js')}"></script>
-        <link rel="stylesheet" type="text/css" href="${tg.url('/widgets/'+widget+'/'+widget+'.css')}" />
+
+    <div py:for="widget in widgets" py:strip="True">
+        <script type="text/javascript" src="${tg.url(widget+'.js')}"></script>
+        <link rel="stylesheet" type="text/css" href="${tg.url(widget+'.css')}" />
     </div>
     
 </head>
