Quelques corrections dans les templates de VigiBoard. Tentative de gestion des erreurs dans le plugin "details" de VigiBoard.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2824 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -13,16 +13,17 @@
 <head> 
     <py:choose>
         <title py:when="hostname and servicename">
-            ${l_('VigiBoard - Events table for service "%(servicename)s" on "%(hostname)s"') % {
+            VigiBoard - ${l_('Events table for service "%(servicename)s" on "%(hostname)s"') % {
                 'hostname': hostname,
                 'servicename': servicename,
             }}
         </title>
         <title py:when="hostname">
-            ${l_('VigiBoard - Events table for host "%s"') % hostname}
+            VigiBoard - ${l_('Events table for host "%s"') % hostname}
         </title>
         <title py:otherwise="">
-            VigiBoard - Events table
+            <!--! Le l_ permet ici de réutiliser les traductions. -->
+            VigiBoard - ${l_('Events table')}
         </title>
     </py:choose>
 </head>
