--- a/src/vigilo/themes/templates/vigiboard/raw_events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/raw_events_table.html
@@ -12,20 +12,20 @@
 <head>
     <py:choose>
         <title py:when="hostname and servicename">
-            ${l_('VigiBoard - Masked events for event #%(idcorrevent)d on host "%(hostname)s" and  service "%(servicename)s"') % {
+            VigiBoard - ${l_('Masked events for event #%(idcorrevent)d on host "%(hostname)s" and  service "%(servicename)s"') % {
                 'hostname': hostname,
                 'servicename': servicename,
                 'idcorrevent': idcorrevent,
             }}
         </title>
         <title py:when="hostname">
-            ${l_('VigiBoard - Masked events for event #%(idcorrevent)d on host "%s"') % {
+            VigiBoard - ${l_('Masked events for event #%(idcorrevent)d on host "%(hostname)s"') % {
                 'hostname': hostname,
                 'idcorrevent': idcorrevent,
             }}
         </title>
         <title py:otherwise="">
-            ${l_('VigiBoard - Masked events for event #%d') % idcorrevent}
+            VigiBoard - ${l_('Masked events for event #%d') % idcorrevent}
         </title>
     </py:choose>
 </head>
@@ -64,7 +64,7 @@
                                 }}
                             </span>
                             <span py:when="hostname">
-                                ${l_('Masked events for event #%(idcorrevent)d on host "%s"') % {
+                                ${l_('Masked events for event #%(idcorrevent)d on host "%(hostname)s"') % {
                                     'hostname': hostname,
                                     'idcorrevent': idcorrevent,
                                 }}
