--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -9,7 +9,7 @@
     <!--[if IE]><script type="text/javascript" src="${tg.url('/js/excanvas.js')}"></script><![endif]-->
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/jxlib/jxtheme.uncompressed.css')}" />
     <style type="text/css">@import "${tg.url('css/map.css')}";</style>
-    <style type="text/css">@import "${tg.url('css/images.css')}";</style>
+    <style type="text/css">@import "${tg.url('css/widget_images.css')}";</style>
     <style type="text/css">@import "${tg.url('css/ServiceElement.css')}";</style>
 
     <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
@@ -49,7 +49,7 @@
     <script type="text/javascript" src="${tg.url('/js/fieldautocomplete.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/buttonColor.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/tg_submit.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/images.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/widget_images.js')}"></script>
     
     
 </head>
