--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -310,8 +310,9 @@ canvas {
 }
 
 .saving {
-    opacity: 0.7 !important;
-    /*border: 2px dashed gray;*/
+    padding: 1px;
+    background-color: #eee !important;
+    border: 1px dashed gray !important;
 }
 
 .fielderror {
