Ajout d'un lien sur le titre
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2927 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -23,6 +23,18 @@ ul {
 
 /* Affichage general */
 
+h1 a,
+h1 a:visited,
+h1 a:hover,
+h1 a:active
+{
+    text-decoration: none;
+    color: black;
+}
+h1 a:hover {
+    text-shadow: 0.1em 0.1em 0.2em #aaa;
+}
+
 #menu {
     width: 100%;
 }
