--- a/src/vigilo/themes/templates/vigimap/index.html
+++ b/src/vigilo/themes/templates/vigimap/index.html
@@ -41,7 +41,7 @@
 
 
     <div id="header">
-        <h1>VigiMap<span id="maptitle"></span></h1>
+        <h1><a href="${tg.url('/')}">VigiMap<span id="maptitle"></span></a></h1>
     </div>
 
     <div id="menu">
