--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -57,7 +57,7 @@
 
 
     <div id="header">
-        <h1>VigiMap ${l_("(edit mode)")}<span id="maptitle"></span></h1>
+        <h1><a href="${tg.url('/edit')}">VigiMap ${l_("(edit mode)")}<span id="maptitle"></span></a></h1>
     </div>
 
     <div id="menu">
